# Sudoku

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  SudokuClass.cpp  SudokuClass.h  SudokuMain
data/: 1.sudoku  1_ans.sudoku  2.sudoku  3.sudoku  4.sudoku  5.sudoku  6.sudoku
demo/: CMakeLists.txt  README.md  run-all-demo.sh
demo/for-c/: CMakeLists.txt  Makefile
demo/for-c/src/: for-c.c  solveproc.c
demo/for-cs/: Makefile  for-cs.csproj  for-cs.sln
demo/for-cs/src/: BoolMatrix.cs  Main.cs  Sudoku.cs  SudokuLib.cs
demo/for-go/: Makefile  go.mod  main.go
demo/for-go/boolmatrix/: boolmatrix.go
demo/for-go/sudoku/: sudoku.go
demo/for-java/: BoolMatrix.java  Main.java  Makefile  README.md  Sudoku.java  SudokuLib.java
demo/for-java/jni/: CMakeLists.txt  SudokuLib.c  SudokuLib.h
demo/for-lua/: Makefile  README.md  boolmatrix.lua  main.lua  solveproc.lua  sudoku.lua
demo/for-lua/cmod/: CMakeLists.txt  luasudoku.c
demo/for-lua/cmod/windows/: CMakeLists.txt
demo/for-lua/runtime/linux/: liblualib.so.5.3  lua
demo/for-lua/runtime/macosx/: liblualib.5.3.dylib  liblualib.dylib  lua
demo/for-lua/runtime/windows/: lualib.lib
demo/for-nodejs/: Makefile  boolmatrix.js  libsudoku.js  main.js  solveproc.js  sudoku.js
demo/for-php/: Makefile  README.md  boolmatrix.php  main.php  solveproc.php  sudoku.php
demo/for-php/phpsudoku/: CREDITS  config.m4  config.w32  libsudoku.c  php_phpsudoku.h  phpsudoku.c  phpsudoku.php
demo/for-php/phpsudoku/tests/: 001.phpt
demo/for-python/: Makefile  README.md  boolmatrix.py  libsudoku.py  main.py  solveproc.py  sudoku.py
include/: sudoku.h
libsudoku/: CMakeLists.txt
libsudoku/Android/jni/: Android.mk  ListSRC.sh
libsudoku/iOS/sudoku.xcodeproj/: project.pbxproj
libsudoku/include/: bool-matrix.h  sudoku.h
libsudoku/src/: bool-matrix.c  methods-doc.md  methods.h  sudodef.h  sudoku.c  sudomat.c  sudomat.h  sudostep.h
libsudoku/test/: CMakeLists.txt
libsudoku/test/src/: sudoku-test.c
oldcode/: Makefile  SudokuClass.h  SudokuMain.cpp
sudoku/: CMakeLists.txt
sudoku/Android/jni/: Android.mk  Application.mk
sudoku/iOS/sudoku.xcodeproj/: project.pbxproj
sudoku/include/: sudodef.h
sudoku/src/: bool-matrix.c  methods-doc.md  methods.c  methods.h  sudodef.h  sudoku.c  sudomat.c  sudostep.c
sudoku/test/: CMakeLists.txt  sudoku-test.c
sudoku/test/src/: sudoku-test.c
tools/: CMakeLists.txt  SudokuTable.xlsx
tools/diff-sudoku/: CMakeLists.txt
tools/diff-sudoku/src/: diff-sudoku.c
tools/format-sudoku/: CMakeLists.txt
tools/format-sudoku/src/: format-sudoku.c
