cmake_minimum_required(VERSION 3.0)
project(demo
	VERSION 1.0.0
	# DESCRIPTION "Demo for testing"
	# HOMEPAGE_URL "www.zhyingkun.com"
	LANGUAGES C CXX
)

message(STATUS "CMakeLists.txt for ${PROJECT_NAME}")

add_subdirectory(for-c)
# add_subdirectory(for-go)
# add_subdirectory(for-java)
# add_subdirectory(for-lua)
# add_subdirectory(for-monocs)
# add_subdirectory(for-nodejs)
# add_subdirectory(for-php)
# add_subdirectory(for-python)
